--- a/style.css
+++ b/style.css
@@ -67,3 +67,44 @@ main.container {
     text-align: center;
     transition: background 0.5s;
 }
+
+#weatherBox.hidden,
+#forecastBox.hidden {
+    display: none;
+}
+ 
+#weatherBox img {
+    width: 80px;
+    height: 80px;
+    margin: 0.5rem 0;
+    background-color: gray;
+    border-radius: 10px;
+}
+ 
+/* Forecast Cards */
+.forecast-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-top: 1rem;
+}
+ 
+.forecast-card {
+    background: #fff;
+    border-radius: 10px;
+    padding: 0.5rem;
+    width: calc(33% - 0.5rem);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+ 
+.forecast-card img {
+    width: 50px;
+    height: 50px;
+}
+ 
+#favList {
+    list-style: none;
+    margin-top: 1.5rem;
+}
