--- a/style.css
+++ b/style.css
@@ -108,3 +108,41 @@ main.container {
     list-style: none;
     margin-top: 1.5rem;
 }
+
+.fav-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: white;
+    padding: 1.5rem;
+    margin-bottom: 0.3rem;
+    border-radius: 5px;
+}
+ 
+.fav-buttons button {
+    margin-left: 0.5rem;
+    padding: 0.2rem 0.5rem;
+    font-size: 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+ 
+.view-btn {
+    background-color: #4a90e2;
+    color: white;
+}
+ 
+.delete-btn {
+    background-color: #e74c3c;
+    color: white;
+}
+ 
+button#favBtn {
+    background-color: red;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+ 
