--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
- 
+
 body {
     min-height: 100vh;
     display: flex;
@@ -13,23 +13,25 @@ body {
     background: linear-gradient(to bottom, #87ceeb, #f0f4f8);
     transition: background 0.5s;
     color: #333;
+
 }
- header,
+
+header,
 footer {
     text-align: center;
     padding: 1rem;
     background: #4a90e2;
     color: white;
 }
- 
+
 main.container {
     flex: 1;
     max-width: 700px;
     margin: 2rem auto;
     padding: 0 1rem;
-    min-width: 500px;
+    min-width: 350px;
 }
- 
+
 .search {
     display: flex;
     gap: 0.5rem;
@@ -41,7 +43,7 @@ main.container {
     padding: 0.5rem;
     font-size: 1rem;
 }
- 
+
 .search button {
     padding: 0.5rem 1rem;
     font-size: 1rem;
@@ -51,12 +53,12 @@ main.container {
     border: none;
     border-radius: 5px;
 }
- 
+
 #errorMsg {
     color: red;
     margin-bottom: 1rem;
 }
- 
+
 #weatherBox,
 #forecastBox {
     background: rgba(255, 255, 255, 0.9);
@@ -72,7 +74,7 @@ main.container {
 #forecastBox.hidden {
     display: none;
 }
- 
+
 #weatherBox img {
     width: 80px;
     height: 80px;
@@ -80,7 +82,7 @@ main.container {
     background-color: gray;
     border-radius: 10px;
 }
- 
+
 /* Forecast Cards */
 .forecast-container {
     display: flex;
@@ -89,7 +91,7 @@ main.container {
     gap: 0.5rem;
     margin-top: 1rem;
 }
- 
+
 .forecast-card {
     background: #fff;
     border-radius: 10px;
@@ -98,12 +100,12 @@ main.container {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
- 
+
 .forecast-card img {
     width: 50px;
     height: 50px;
 }
- 
+
 #favList {
     list-style: none;
     margin-top: 1.5rem;
@@ -118,7 +120,7 @@ main.container {
     margin-bottom: 0.3rem;
     border-radius: 5px;
 }
- 
+
 .fav-buttons button {
     margin-left: 0.5rem;
     padding: 0.2rem 0.5rem;
@@ -127,17 +129,17 @@ main.container {
     border-radius: 5px;
     cursor: pointer;
 }
- 
+
 .view-btn {
     background-color: #4a90e2;
     color: white;
 }
- 
+
 .delete-btn {
     background-color: #e74c3c;
     color: white;
 }
- 
+
 button#favBtn {
     background-color: red;
     color: #fff;
@@ -145,23 +147,30 @@ button#favBtn {
     border-radius: 10px;
     margin-top: 10px;
 }
- .icon {
+
+.icon {
     width: 20px;
     height: 20px;
     vertical-align: middle;
     margin-right: 5px;
 }
- 
+
 /* Responsive */
 @media(max-width: 500px) {
+
+    header,
+    footer {
+        min-width: 100%;
+    }
+
     .search {
         flex-direction: column;
     }
- 
+
     .search button {
         width: 100%;
     }
- 
+
     .forecast-card {
         width: 100%;
     }
